--- a/ZonaGram/android/gradle.properties
+++ b/ZonaGram/android/gradle.properties
@@ -16,5 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-
+android.enableAapt2=false
 android.useDeprecatedNdk=true
+APP_RELEASE_STORE_FILE=logicalcurvekey.keystore
+APP_RELEASE_KEY_ALIAS=logicalcurvekey
+APP_RELEASE_STORE_PASSWORD=limaigor123
+APP_RELEASE_KEY_PASSWORD=limaigor123
