--- a/ZonaGram/package.json
+++ b/ZonaGram/package.json
@@ -14,6 +14,7 @@
     "react-native-linear-gradient": "^2.4.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-update-gradle": "^1.0.2",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
