--- a/ZonaGram/package.json
+++ b/ZonaGram/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-emoji-selector": "^0.1.6",
     "react-native-linear-gradient": "^2.4.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-update-gradle": "^1.0.2",
